--- a/js/package.json
+++ b/js/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-rewire": "^1.1.0",
     "babel-preset-es2015": "^6.24.1",
     "jest": "^22.0.3",
+    "jsdoc": "^3.5.5",
     "regenerator-runtime": "^0.11.1"
   },
   "devDependencies": {}
