Add documentation for layout module

--- a/js/package.json
+++ b/js/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "jest --colors",
-    "jsdoc": "jsdoc ./layout/layout_row.js",
+    "jsdoc": "jsdoc ./layout/*.js ./container/*.js -p",
     "start": "jest --watch --colors --bail"
   },
   "author": "jjjj222",
